# introvert

./: .cursorrules  .gitignore  BACKUP_LOCATION.md  BACKUP_SUMMARY.md  Cargo.toml  DEBUG_DOCUMENT.md  DEBUG_REPORT_2026-07-06.md  DEBUG_SESSION_STATUS.md  GEMINI.md  INTROVERT_MASTER_PLAN.md  Introvert:  MARKETING_REPORT.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v22.md  RELEASE_NOTES_v25.md  RELEASE_NOTES_v29.md  RELEASE_NOTES_v39.md  SESSION_HANDOFF.md  VERSION_CHANGELOG.md  all_for_linux_src_diff.txt  all_src_diff.txt  build-android.sh  build_and_deploy.sh  build_standalone_apk.sh  daemon_swarm_event.rs  deploy_anchor.sh  deploy_first_light.sh  deploy_introvert_token.sh  deploy_local_rbn.sh  deploy_rbn.sh  finalize_rbn.sh  fix_consts.py  fix_consts_v2.py  fix_consts_v3.py  fix_grid.py  for_linux_network_mod_diff.txt  introvert-plugin.ts  introvertd.service  (+7 more)
.cargo/: config.toml
.mimocode/: .cron-lock
Docs/: ARCHITECTURE_BLUEPRINT.md  BINARY_CODEC_UPGRADE_PLAN.md  BUILD_&_DEPLOYMENT_GUIDE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION_REFERENCE.md  CONTRIBUTING.md  CROSS_NETWORK_FAILURE_REMEDIATION_PLAN.md  DEBUG_REPORT_2026-07-08.md  DEBUG_REPORT_2026-07-09.md  DEBUG_REPORT_2026-07-10.md  DEBUG_SESSION_STATUS.md  DEPLOYMENT_ARCHITECTURE.md  ECONOMY_AUDIT_2026-07-06.md  ECONOMY_MATHEMATICAL_SPECIFICATION.md  ECONOMY_PULL_BASED_REWARD_ARCHITECTURE.md  ECONOMY_V3_REVISED_REWARD_MODEL.md  ECONOMY_V3_SIMULATION_SCENARIOS.md  ENVIRONMENT_VARIABLES.md  EXPERT_CONSULTATION_NETWORK_LOOP_STARVATION.md  FFI_API_REFERENCE.md  FILE_TRANSFER_PROTOCOL.md  FIX_PLAN_RELAY_MESSAGING.md  HANDLE_REGISTRY_DEPLOYMENT.md  INTROVERT PROJECT UPDATE 3RD MAY 2026.odt  INTROVERT_DEEP_AUDIT_REPORT_2026_05_25.md  INTROVERT_DEEP_AUDIT_REPORT_2026_05_29.md  INTROVERT_DEEP_AUDIT_REPORT_2026_06_24.md  INTROVERT_ECONOMY_BLUEPRINT.md  INTROVERT_FILE_TRANSFER_STALL_AUDIT.md  INTROVERT_MASTER_PLAN.md  INTROVERT_MASTER_PLAN.md.stable  INTROVERT_PROGRESS_REPORT_2026-05-01.md  INTROVERT_PROGRESS_REPORT_2026-05-03.md  INTROVERT_TOKEN_WHITEPAPER.md  IOS_PUSH_SETUP.md  Introvert_Quick_Ref_guide.odt  LICENSE  MARKETING_REPORT.md  MEDIA_SAFETY_MODULE.md  (+21 more)
firebase/: google-services.json
for_expert/: IMPLEMENTATION_PLAN_2026-07-15.md  MIMO_CLI_IMPLEMENTATION_PROMPT_2026-07-15.md  MIMO_CLI_RECTIFICATION_PROMPT.md  RECTIFICATION_DIFF_2026-07-15.patch  RECTIFICATION_PLAN_v2_VERIFIED_2026-07-15.md  TEST_CHECKLIST_2026-07-15.md
for_linux/: Cargo.toml  GEMINI_REMOTE_PROMPT.txt  build_linux.sh  introvertd.service
lib/: blueprint_ui.dart  blueprint_ui.dart.stable  connectivity_listener.dart  main.dart  main.dart.stable
linux/: CMakeLists.txt
logs/: android_2026-07-23_03-10-49.txt  android_2026-07-23_04-03-37.txt  android_2026-07-23_04-31-09.txt  android_2026-07-23_05-12-04.txt  android_2026-07-24_16-24-31.txt  android_2026-07-24_16-52-42.txt  android_2026-07-24_21-13-48.txt  android_2026-07-24_21-59-02.txt  android_2026-07-24_22-21-02.txt  ios_2026-07-23_03-09-38.txt  ios_2026-07-23_04-03-32.txt  ios_2026-07-23_04-31-13.txt  ios_2026-07-23_05-11-31.txt  ios_2026-07-24_16-23-49.txt  ios_2026-07-24_16-52-36.txt  ios_2026-07-24_21-13-39.txt  ios_2026-07-24_21-58-54.txt  iphone12_2026-07-24_19-37-57.txt  iphone12_2026-07-24_19-46-41.txt  iphone12_2026-07-24_20-18-20.txt  iphone12_2026-07-24_21-13-53.txt  iphone12_2026-07-24_21-59-07.txt  iphone12_2026-07-24_22-21-10.txt  mac_2026-07-23_03-03-21.txt  mac_2026-07-23_04-03-25.txt  mac_2026-07-23_04-31-31.txt  mac_2026-07-23_05-11-26.txt  mac_2026-07-24_16-24-11.txt  mac_2026-07-24_16-52-30.txt  mac_2026-07-24_19-56-28.txt  mac_2026-07-24_21-13-33.txt  mac_2026-07-24_21-58-50.txt  mac_2026-07-24_22-20-43.txt
macos/: Podfile
plugins/: pdf_render_maintained
scratch/: add_dashboard_auth.py  add_diagnostics_widget.py  add_export_api.py  add_reveal_modal.py  create_stable_backup.py  embed_images.py  fix_dashboard_signing_key.py  fix_default_password_hash.py  fix_online_status_bug.py  inject_dashboard_auth_ui.py  update_all_docs.py  update_dashboard_js.py  update_rust_main.py
scripts/: backup.sh  build_android.sh  build_macos_dmg.sh  cmake_wrapper.sh  extract_fifa_themes.dart  setup_rbn.sh
solana_program/: Anchor.toml  Cargo.toml
solana_program/programs/introvert_handle_registry/: Cargo.toml
solana_program/programs/introvert_handle_registry/src/: lib.rs
solana_program/programs/introvert_registry/: Cargo.toml
solana_program/programs/introvert_registry/src/: lib.rs
src/: dashboard.html  embedding.rs  identity.rs  intro_claw.rs  lib.rs  lib.rs.stable  main.rs  safety.rs  storage.rs  storage.rs.stable
stable_v12/: Cargo.toml  RELEASE_NOTES.md  behaviour.rs  chat_screen.dart  mod.rs
stable_v35/: RELEASE_NOTES.md
test/: dummy_test.dart
test_hash/: Cargo.toml
tests/: asynchronous_contiguity_audit.rs  (+18 more)
(+330 files in other folders)
