[package]
name = "introvert"
version = "0.1.0"
edition = "2021"

[dependencies]
# Identity & Crypto
libp2p = { version = "0.53.2", features = ["ed25519", "rsa", "tcp", "quic", "kad", "noise", "yamux", "dns", "tokio", "macros", "request-response", "json", "mdns", "dcutr", "relay", "autonat", "identify", "websocket"] }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
snow = "0.9"
bip39 = { version = "2.0.0", features = ["rand"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
webrtc = "0.11"

# Storage
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Wormhole Onboarding
magic-wormhole = { version = "0.7", features = ["transfer", "transit"] }

# Solana - Using 2.0.0 to align with curve25519-dalek 4.x / zeroize 1.7
solana-sdk = "2.0.0"
solana-client = "2.0.0"

# Async & Threading
tokio = { version = "1.36", features = ["full"] }
aes-gcm = "0.10"
once_cell = "1.19"
parking_lot = "0.12"

# Utilities
libc = "0.2"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
webpki-roots = "0.25"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
base64 = "0.21"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
solana-account-decoder = "=2.1.0"

[dev-dependencies]
tempfile = "3.10"
tracing-subscriber = "0.3"

[lib]
name = "introvert"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "introvertd"
path = "src/main.rs"
