[package]
name = "introvert"
version = "0.1.0"
edition = "2021"

[dependencies]
# Identity & Crypto
libp2p = { version = "0.56.0", features = ["ed25519", "rsa", "tcp", "quic", "kad", "noise", "yamux", "dns", "tokio", "macros", "request-response", "json", "mdns", "dcutr", "relay", "autonat", "identify", "websocket", "upnp", "ping", "gossipsub"] }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
snow = "0.9"
bip39 = { version = "2.0.0", features = ["rand"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
webrtc = "0.11"
bytes = "1.5"
image = "0.25"

# Storage
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
zeroize = { version = "1.8", features = ["derive"] }

# Wormhole Onboarding
magic-wormhole = { version = "0.7", features = ["transfer", "transit", "tls"] }

# Solana - Using 4.0.x to align with curve25519-dalek 4.x / zeroize 1.7
solana-sdk = "4.0.1"
solana-client = "4.0.0-rc.0"
solana-account-decoder = "4.0.0-rc.0"

# Async & Threading
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
aes-gcm = "0.10"
once_cell = "1.19"
parking_lot = "0.12"

# Utilities
libc = "0.2"
indexmap = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
webpki-roots = "0.25"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
base64 = "0.21"
bincode = "1.3"
bs58 = "0.5"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
rpassword = "7.3"
dialoguer = "0.11"
async-compat = "0.2.5"
tokio-tungstenite = "0.28.0"
futures-util = "0.3"

# Local Embeddings
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"

[dev-dependencies]
tempfile = "3.10"
tracing-subscriber = "0.3"

[lib]
name = "introvert"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "introvertd"
path = "src/main.rs"
