[package]
name = "introvert-registry"
version = "0.1.0"
description = "Solana RBN Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "introvert_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
